--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                 <div class="dice-inner">
                     <img id="dice-face" src="./img/dice1.png" alt="1">
                 </div>
-            <div class="playButton"></div>
+                <div class="scoreboard">
+                    <div class="scoreboard-headings">
+                            <div>Name</div><div>Last Roll</div><div>Score</div>
+                    </div>
+                    <div id="scoreboard-inner"> 
+
+                    </div>
+                </div>
+            <button type="button" id="play" class="play-button">Play the game!</button>
+            <button type="button" id="roll" class="play-button">Roll the die!</button>
             </div>
         </div>
 
