--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
                     <li>Each time the dice is rolled the score adds up.</li>
                     <li>If the score passes 20, you win.</li>
                     <li>If you roll a 1 at any time, you lose.</li>
+                    <li>Click the button below to start!</li>
                 </ol>
             </div>
         </div>
         <div class="controls">
             <button type="button" id="play" class="button">Play the game!</button>
             <button type="button" id="roll" class="button">Roll the die!</button>
+            <button type="button" id="submit" class="button">Submit ></button>
         </div>
 
         <div class="play-area">
