--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1>Dice Game</h1>
         </div>
         <div id="message-box">
-            <div id="message-box-inner"></div>
-            <input type="text" name="response" id="input">
+            <div id="message-box-inner">asdfasdf</div>
+            <input type="text" name="input" id="input">
             <div id="instructions">
                 <h3>Rules:</h3>
                 <ol>
