--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Dice Game</h1>
         </div>
         <div id="message-box">
-            <div id="message-box-inner">asdfasdf</div>
+            <div id="message-box-inner"></div>
             <input type="text" name="input" id="input">
             <div id="instructions">
                 <h3>Rules:</h3>
@@ -31,6 +31,7 @@
             <button type="button" id="play" class="button">Play the game!</button>
             <button type="button" id="roll" class="button">Roll the die!</button>
             <button type="button" id="submit" class="button">Submit ></button>
+            <button type="button" id="next" class="button">Next</button>
         </div>
 
         <div class="play-area">
@@ -54,5 +55,5 @@
     </div>
     <script src="script.js"></script>
 </body>
-https://www.youtube.com/watch?v=s6SH72uAn3Q
+<!-- https://www.youtube.com/watch?v=s6SH72uAn3Q -->
 </html>
