Strange exponential loop going on...

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <div>Name</div>
                 <div>Last Roll</div>
                 <div>Score</div>
+                <div>Wins</div>
+                <div>Losses</div>
+
             </div>
             <div id="scoreboard-inner">
                 <div></div>
