--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div class="controls">
             <button type="button" id="play" class="button">Play the game!</button>
             <button type="button" id="roll" class="button">Roll the die!</button>
+            <button type="button" id="rollagain" class="button">Roll again</button>
+
         </div>
 
         <div class="play-area">
