--- a/index1player.html
+++ b/index1player.html
@@ -30,8 +30,8 @@
         <div class="controls">
             <button type="button" id="play" class="button">Play the game!</button>
             <button type="button" id="roll" class="button">Roll the die!</button>
-            <button type="button" id="submit" class="button">Submit ></button>
-            <button type="button" id="next" class="button">Next</button>
+            <button type="button" id="rollagain" class="button">Roll again</button>
+
         </div>
 
         <div class="play-area">
@@ -42,21 +42,7 @@
                 Your score is:
             </div><div id="score-number">0</div>
         </div>
-        <div class="scoreboard">
-            <div class="scoreboard-headings">
-                <div>Name</div>
-                <div>Last Roll</div>
-                <div>Score</div>
-                <div>Wins</div>
-                <div>Losses</div>
-
-            </div>
-            <div id="scoreboard-inner">
-                <div></div>
-            </div>
-        </div>
     </div>
     <script src="script1player.js"></script>
 </body>
-<!-- https://www.youtube.com/watch?v=s6SH72uAn3Q -->
 </html>
