--- a/index.html
+++ b/index.html
@@ -30,19 +30,36 @@
         <div class="controls">
             <button type="button" id="play" class="button">Play the game!</button>
             <button type="button" id="roll" class="button">Roll the die!</button>
-            <button type="button" id="rollagain" class="button">Roll again</button>
-
+            <button type="button" id="next" class="button">Next Player></button>
+            <button type="button" id="submit" class="button">Submit</button>
+            <button type="button" id="add-player" class="button">Add a player</button>
         </div>
 
-        <div class="play-area">
+        <div class="play-area" id="play-area">
             <div class="dice-inner">
                 <img id="dice-face" src="./img/dice1.png" alt="1">
             </div>
             <div class="score">
                 Your score is:
-            </div><div id="score-number">0</div>
+            </div>
+            <div id="score-number">0</div>
+        </div>
+        <div class="scoreboard">
+            <div class="scoreboard-headings">
+                <div>Name</div>
+                <div>Last Roll</div>
+                <div>Score</div>
+                <div>Wins</div>
+                <div>Losses</div>
+
+            </div>
+            <div id="scoreboard-inner">
+                <div></div>
+            </div>
         </div>
     </div>
-    <script src="script1player.js"></script>
+    <script src="script.js"></script>
 </body>
+<!-- https://www.youtube.com/watch?v=s6SH72uAn3Q -->
+
 </html>
